# scansible

./: .gitignore  README.md  TODO.md  pyproject.toml
DependencyPatternMatcher/: .gitignore  build.sbt
DependencyPatternMatcher/src/main/scala/matcher/: DependencyPatternMatcher.scala  DependencyTag.scala  Main.scala
DependencyPatternMatcher/src/test/scala/: BaseSpec.scala  CommunityGeneralCmdRunnerMatcherSpec.scala  CommunityGeneralDepsMatcherSpec.scala  DynamicImportsMatcherSpec.scala  GetBinPathMatcherSpec.scala  GuardedImportMatcherSpec.scala
ansible_graph_extractor/: __main__.py  extract.py  repo_scan.py  utils.py
ansible_graph_extractor/detector/: __init__.py  base.py  conflicting_variables.py  reuse_changed_rule.py  reuse_dynamic_rule.py  sanity_num_tasks.py  unnecessary_include_vars.py  unnecessary_set_fact.py
ansible_graph_extractor/extractor/: blocks.py  context.py  main.py  task_files.py  tasks.py  templates.py  var_context.py  var_files.py
ansible_graph_extractor/io/: graphml.py  structural_models.py
ansible_graph_extractor/models/: edges.py  nodes.py
examples/: example.yaml
lib/stubs/: tqdm.pyi
lib/stubs/ansible/: __init__.pyi  constants.pyi
lib/stubs/ansible/errors/: __init__.pyi
lib/stubs/ansible/inventory/: manager.pyi
lib/stubs/ansible/module_utils/common/: parameters.pyi
lib/stubs/ansible/module_utils/parsing/: convert_bool.pyi
lib/stubs/ansible/parsing/: dataloader.pyi  mod_args.pyi
lib/stubs/ansible/parsing/yaml/: __init__.pyi  objects.pyi
lib/stubs/ansible/playbook/: __init__.pyi  attribute.pyi  base.pyi  block.pyi  collectionsearch.pyi  conditional.pyi  handler.pyi  handler_task_include.pyi  helpers.pyi  included_file.pyi  loop_control.pyi  play.pyi  playbook_include.pyi  role_include.pyi  taggable.pyi  task.pyi  task_include.pyi
lib/stubs/ansible/playbook/role/: __init__.pyi  definition.pyi  include.pyi  metadata.pyi  requirement.pyi
lib/stubs/ansible/plugins/: loader.pyi
lib/stubs/ansible/template/: __init__.pyi
lib/stubs/ansible/utils/: __init__.pyi  sentinel.pyi
lib/stubs/ansible/vars/: manager.pyi
lib/stubs/betamax/: __init__.pyi  configure.pyi  recorder.pyi
lib/stubs/cattr/: __init__.pyi  converters.pyi
lib/stubs/git/: __init__.pyi  cmd.pyi  compat.pyi  config.pyi  db.pyi  diff.pyi  exc.pyi  remote.pyi  util.pyi
lib/stubs/git/objects/: base.pyi  commit.pyi  tag.pyi  util.pyi
lib/stubs/git/refs/: head.pyi  log.pyi  reference.pyi  remote.pyi  symbolic.pyi  tag.pyi
lib/stubs/git/repo/: base.pyi  fun.pyi
lib/stubs/graphviz/: __init__.pyi  backend.pyi  dot.pyi  files.pyi
lib/stubs/networkx/: __init__.pyi  _types.pyi
lib/stubs/networkx/algorithms/: __init__.pyi  dag.pyi
lib/stubs/networkx/classes/: __init__.pyi  digraph.pyi  graph.pyi  graphviews.pyi  multidigraph.pyi  multigraph.pyi
lib/stubs/networkx/readwrite/: __init__.pyi  graphml.pyi
lib/stubs/pendulum/: __init__.pyi  datetime.pyi  duration.pyi  parser.pyi
lib/stubs/pytest_describe/: __init__.pyi
src/scansible/: __init__.py  __main__.py  extract.py  old___main__.py  old_utils.py  repo_scan.py  types.py
src/scansible/checks/: __init__.py  reporter.py
src/scansible/checks/security/: __init__.py  db.py
src/scansible/checks/security/rules/: __init__.py  admin_by_default.py  base.py  empty_password.py  hardcoded_secret.py  http_without_ssl_tls.py  missing_integrity_check.py  unrestricted_ip_address.py  weak_crypto.py
src/scansible/checks/security/rules_glitch/: __init__.py  admin_by_default.py  empty_password.py  hardcoded_secret.py  http_without_ssl_tls.py  missing_integrity_check.py  unrestricted_ip_address.py  weak_crypto.py
src/scansible/checks/security/rules_slac/: __init__.py  admin_by_default.py  base.py  empty_password.py  hardcoded_secret.py  http_without_ssl_tls.py  (+3 more)
src/scansible/checks/semantics/: __init__.py  base.py  conflicting_variables.py  override_unused_rule.py  reuse_changed_rule.py  reuse_impure_expression_rule.py  sanity_num_tasks.py  unconditional_override_rule.py  unnecessary_include_vars.py  unnecessary_set_fact.py  utils.py
src/scansible/detector/: base.py  override_unused_rule.py  reuse_changed_rule.py  reuse_nonidempotent_expression_rule.py  unconditional_override_rule.py  unnecessary_set_fact.py  utils.py
src/scansible/extractor/: __init__.py  blocks.py  context.py  task_files.py  templates.py  var_context.py  var_files.py
src/scansible/io/: graphviz.py  neo4j.py
src/scansible/models/: edges.py  graph.py  nodes.py
src/scansible/representations/: _utils.py
src/scansible/representations/_utils/: __init__.py
src/scansible/representations/pdg/: __init__.py  canonical.py  representation.py
src/scansible/representations/structural/: __init__.py  ansible_types.py  extractor.py  helpers.py  loaders.py  representation.py  visualization.py
src/scansible/sca/: __init__.py  collection_info.py  constants.py  module_scanner.py  report.py  types.py  vulnerabilities.py
src/scansible/sca/html/: base.html.j2  collections.html.j2  dependencies.html.j2  index.html.j2  modules.html.j2  nav.html.j2  roles.html.j2  weaknesses.html.j2
src/scansible/utils/: __init__.py  actions.py  entrypoints.py  module_type_info.py  type_validators.py
src/test_utils/: graph_matchers.py
tests/: conftest.py
tests/checks/: test_security.py  test_semantics.py
tests/extractor/: _test_data_flow_against_ansible.py  _test_templates.py  _test_var_context.py  test_data_flow_against_ansible.py  test_templates.py  test_var_context.py
tests/helpers/: graph_matchers.py
tests/io/: _test_graphml.py  test_graphml.py  test_neo4j.py
tests/model/: _test_graph.py  _test_nodes.py  test_graph.py  test_nodes.py
tests/representations/pdg/: test_representation.py
tests/representations/pdg/extractor/: test_data_flow_against_ansible.py  test_environment_stack.py  test_templates.py  test_var_context.py
tests/representations/pdg/io/: test_graphml.py  test_neo4j.py
tests/representations/structural/: test_extractor.py  test_helpers.py  test_loaders.py
tests/test_helpers/: _test_graph_matchers.py  test_graph_matchers.py
(+54 files in other folders)
