[tool.poetry]
name = "scansible"
version = "0.1.2"
description = "Static Analysis Framework for Ansible"
authors = ["Ruben Opdebeeck <ropdebee@vub.be>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.5.1"
click = "^8.1.3"
pydantic = "^1.8.1"
loguru = "^0.6.0"
attrs = "^22.1.0"
Jinja2 = "^3.1.2"
attrs-strict = "^1.0.0"
rich = "13.4.2"
graphviz = "^0.20.1"
MarkupSafe = "2.0.1"
redis = "^4.4.0"
pyyaml = "^6.0.1"
ansible-core = "<2.14.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.17.0"
types-PyYAML = "^6.0.12.1"
mypy = "^0.982"
pytest = "^7.2.0"
pytest-describe = "^2.0.1"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
types-redis = "^4.3.21.6"
black = "^23.1.0"
isort = "^5.12.0"
pyright = "^1.1.300"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"
known_typing = "typing"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pyright]
stubPath = "./lib/stubs"
typeCheckingMode = "strict"
reportImportCycles = "none"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report html"
markers = [
    "slow: marks tests as slow (run with --slow)",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^\\s*if TYPE_CHECKING:",
    "@overload",
    "^\\s*\\.\\.\\.$",
    "raise NotImplementedError\\(",
    "raise TypeError\\(",
    "raise ValueError\\(",
    "raise RuntimeError\\(",
    "@pytest\\.mark\\.xfail",
    "@pytest\\.mark\\.integration",
    "@pytest\\.mark\\.smoke",
    "def __repr__\\(",
]

[tool.mypy]
follow_imports = "normal"
mypy_path = "lib/stubs"

# disallow_any_expr = True
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true
# disallow_any_explicit = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true
strict_optional = true

warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = true
# implicit_reexport = False
strict_equality = true

warn_redundant_casts = true
warn_unused_configs = true
